SERVER-32072 Always roundtrip dbrefs in the shell

dbrefs in the shell can see silent casts from int -> float due to a lack
of special case logic that regular bson objects receive.

For a fix, hook up the special lookup routines in js bsoninfo type into
the js dbrefinfo types.